--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@nuxt/devtools": "latest",
     "@types/node": "^18.17.3",
     "nuxt": "^3.6.5"
+  },
+  "dependencies": {
+    "@nuxt/ui": "^2.8.0",
+    "vue-router": "^4.2.4"
   }
 }
