--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@sidebase/nuxt-auth": "^0.6.0-beta.5",
+    "@tailwindcss/forms": "^0.5.6",
     "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.17.3",
     "autoprefixer": "^10.4.15",
