--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "next-auth": "^4.21.1"
   }
 }
