--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "next-auth": "^4.21.1"
