--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.3",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
-    "next-auth": "^4.21.1"
+    "next-auth": "^4.21.1",
+    "vue-toastification": "^2.0.0-rc.5"
   }
 }
