--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@nuxtjs/i18n": "^8.0.0-rc.4",
     "@sidebase/nuxt-auth": "^0.6.0-beta.5",
     "@tailwindcss/forms": "^0.5.6",
     "@types/bcrypt": "^5.0.0",
