--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@intlify/core-base": "^9.4.1",
+    "@intlify/shared": "^9.4.1",
     "@nuxt/devtools": "latest",
     "@nuxtjs/i18n": "^8.0.0-rc.4",
     "@sidebase/nuxt-auth": "^0.6.0-beta.5",
@@ -25,7 +27,6 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
-    "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "next-auth": "^4.21.1",
     "vue-toastification": "^2.0.0-rc.5"
