--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@intlify/core-base": "^9.4.1",
-    "@intlify/shared": "^9.4.1",
     "@nuxt/devtools": "latest",
-    "@nuxtjs/i18n": "^8.0.0-rc.4",
     "@sidebase/nuxt-auth": "^0.6.0-beta.5",
     "@tailwindcss/forms": "^0.5.6",
     "@types/bcrypt": "^5.0.0",
@@ -23,7 +20,8 @@
     "nuxt": "^3.6.5",
     "nuxt-icon": "^0.5.0",
     "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "vue-i18n": "^9.4.1"
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.3",
